crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/parameter/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

contract C {
    function f(function (uint256) public g) external {}
}
